rust/tests/snapshots/prism_nodes_test__until_loop.snap
---
source: tests/prism_nodes_test.rs
expression: result.inspect()
---
@ DocumentNode (location: (1:0)-(1:41))
└── children: (1 item)
    └── @ ERBUntilNode (location: (1:0)-(1:41))
        ├── tag_opening: "<%" (location: (1:0)-(1:2))
        ├── content: " until done? " (location: (1:2)-(1:15))
        ├── tag_closing: "%>" (location: (1:15)-(1:17))
        ├── prism_node: 
        │   └── @ UntilNode (location: (0,3)-(0,38))
        │       ├── LoopFlags: nil
        │       ├── keyword_loc: (0,3)-(0,8) = "until"
        │       ├── do_keyword_loc: nil
        │       ├── closing_loc: (0,35)-(0,38) = "end"
        │       ├── predicate:
        │       │   @ CallNode (location: (0,9)-(0,14))
        │       │   ├── CallNodeFlags: ignore_visibility
        │       │   ├── receiver: nil
        │       │   ├── call_operator_loc: nil
        │       │   ├── name: :done?
        │       │   ├── message_loc: (0,9)-(0,14) = "done?"
        │       │   ├── opening_loc: nil
        │       │   ├── arguments: nil
        │       │   ├── closing_loc: nil
        │       │   ├── equal_loc: nil
        │       │   └── block: nil
        │       └── statements: nil
        ├── statements: (1 item)
        │   └── @ ERBContentNode (location: (1:17)-(1:32))
        │       ├── tag_opening: "<%=" (location: (1:17)-(1:20))
        │       ├── content: " progress " (location: (1:20)-(1:30))
        │       ├── tag_closing: "%>" (location: (1:30)-(1:32))
        │       ├── parsed: true
        │       ├── valid: true
        │       └── prism_node: 
        │           └── @ CallNode (location: (0,21)-(0,29))
        │               ├── CallNodeFlags: variable_call, ignore_visibility
        │               ├── receiver: nil
        │               ├── call_operator_loc: nil
        │               ├── name: :progress
        │               ├── message_loc: (0,21)-(0,29) = "progress"
        │               ├── opening_loc: nil
        │               ├── arguments: nil
        │               ├── closing_loc: nil
        │               ├── equal_loc: nil
        │               └── block: nil
        └── end_node: 
            └── @ ERBEndNode (location: (1:32)-(1:41))
                ├── tag_opening: "<%" (location: (1:32)-(1:34))
                ├── content: " end " (location: (1:34)-(1:39))
                └── tag_closing: "%>" (location: (1:39)-(1:41))
